[project]
name = "fastcoap"
version = "0.1.0"
description = "FastCOAP — a modern, high-performance Python framework for building CoAP applications and APIs."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Darix SAMANI SIEWE", email = "samanidarix@gmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

    "Environment :: Console",

    "Framework :: AsyncIO",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Typing :: Typed",
]

dependencies = [
    "aiocoap>=0.4.17",
    "cbor2>=6.1.3",
    "pydantic>=2.13.4",
    "typer>=0.26.8",
]


[project.scripts]
fastcoap = "fastcoap.cli:main"

[project.urls]
Homepage = "https://github.com/darixsamni/fastcoap"
Documentation = "https://fastcoap.darixsamani.com/"
Repository = "https://github.com/darixsamni/fastcoap"
Issues = "https://github.com/darixsamni/fastcoap/issues"
Changelog = "https://fastcoap.darixsamani.com/release-notes/"